First version Java 21 - Spring Boot 3