@@ -21,7 +21,7 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 // @ExtendWith(TimingExtension.class)
 @TestConfiguration
-public class JaroWinklerJournalTest {
+class JaroWinklerJournalTest {
 
 	JaroWinklerSimilarity jws = new JaroWinklerSimilarity();
 
@@ -54,8 +54,8 @@ public class JaroWinklerJournalTest {
 	void jwNegativeTest(String input1, String input2) {
 		Double distance = jws.apply(Publication.normalizeJournalJava8(input1),
 				Publication.normalizeJournalJava8(input2));
-		System.err.println(String.format("- 1: %s\n- 2: %s\n- 3: %s\n- 4: %s\n", input1,
-				Publication.normalizeJava8(input1), input2, Publication.normalizeJava8(input2)));
+		System.err.println("- 1: %s\n- 2: %s\n- 3: %s\n- 4: %s\n".formatted(input1,
+			Publication.normalizeJava8(input1), input2, Publication.normalizeJava8(input2)));
 		assertThat(distance).isLessThanOrEqualTo(DeduplicationService.JOURNAL_SIMILARITY_REPLY);
 	}
 
